// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemSizedChannelsList renders component 1`] = `
<Memo(BaseChannelsList)
  channels={
    Immutable.List [
      Immutable.Map {
        "id": 0,
        "name": "Channel 0",
        "private": false,
        "address": "zs1testaddress0",
        "unread": 0,
        "description": "",
        "keys": Immutable.Map {
          "ivk": "incoming-viewing-key-0",
        },
      },
      Immutable.Map {
        "id": 1,
        "name": "Channel 1",
        "private": true,
        "address": "zs1testaddress1",
        "unread": 1,
        "description": "Channel about 1",
        "keys": Immutable.Map {
          "ivk": "incoming-viewing-key-1",
        },
      },
      Immutable.Map {
        "id": 2,
        "name": "Channel 2",
        "private": false,
        "address": "zs1testaddress2",
        "unread": 2,
        "description": "",
        "keys": Immutable.Map {
          "ivk": "incoming-viewing-key-2",
        },
      },
      Immutable.Map {
        "id": 3,
        "name": "Channel 3",
        "private": true,
        "address": "zs1testaddress3",
        "unread": 3,
        "description": "Channel about 3",
        "keys": Immutable.Map {
          "ivk": "incoming-viewing-key-3",
        },
      },
    ]
  }
  height={140}
/>
`;

exports[`ItemSizedChannelsList renders with correct height when displayAddress = true 1`] = `
<Memo(BaseChannelsList)
  channels={
    Immutable.List [
      Immutable.Map {
        "id": 0,
        "name": "Channel 0",
        "private": false,
        "address": "zs1testaddress0",
        "unread": 0,
        "description": "",
        "keys": Immutable.Map {
          "ivk": "incoming-viewing-key-0",
        },
      },
      Immutable.Map {
        "id": 1,
        "name": "Channel 1",
        "private": true,
        "address": "zs1testaddress1",
        "unread": 1,
        "description": "Channel about 1",
        "keys": Immutable.Map {
          "ivk": "incoming-viewing-key-1",
        },
      },
      Immutable.Map {
        "id": 2,
        "name": "Channel 2",
        "private": false,
        "address": "zs1testaddress2",
        "unread": 2,
        "description": "",
        "keys": Immutable.Map {
          "ivk": "incoming-viewing-key-2",
        },
      },
      Immutable.Map {
        "id": 3,
        "name": "Channel 3",
        "private": true,
        "address": "zs1testaddress3",
        "unread": 3,
        "description": "Channel about 3",
        "keys": Immutable.Map {
          "ivk": "incoming-viewing-key-3",
        },
      },
    ]
  }
  displayAddress={true}
  height={216}
/>
`;
